Commit de 30 de abril desde netbeans: ///comentario nuevo 30 abril

--- a/src/GameAffinity/RedaccionBundle/Resources/views/Default/form.html.twig
+++ b/src/GameAffinity/RedaccionBundle/Resources/views/Default/form.html.twig
@@ -1,4 +1,4 @@
-{# empty Twig template #}
+{# este form esta vacio: esto es un nuevo commit de 30 april 3:40 #}
 {% extends "::redaccion.html.twig" %}
 {% block javascripts %}
 {{parent()}}
